# dbx-agentic-app

./: databricks.yml  main.py  pyproject.toml
notebooks/: register_simple_agent.ipynb
src/agents/: simple_agent.py
